--- a/about-founder.html
+++ b/about-founder.html
@@ -13,8 +13,8 @@
   <div class="container header-inner">
     <div class="logo">Niva</div>
     <nav>
-      <a href="/">Home</a>
-      <a href="/contact.html">Contact</a>
+      <a href="index.html">Home</a>
+      <a href="contact.html">Contact</a>
     </nav>
   </div>
 </header>
