--- a/contact.html
+++ b/contact.html
@@ -13,8 +13,8 @@
   <div class="container header-inner">
     <div class="logo">Niva</div>
     <nav>
-      <a href="/">Home</a>
-      <a href="/about-founder.html">About Founder</a>
+      <a href="index.html">Home</a>
+      <a href="about-founder.html">About Founder</a>
     </nav>
   </div>
 </header>
