Fix navigation links for GitHub Pages

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container header-inner">
       <div class="logo">Niva</div>
       <nav>
-        <a href="/">Home</a>
+        <a href="index.html">Home</a>
         <a href="about-founder.html">About Founder</a>
         <a href="contact.html">Contact</a>
       </nav>
