Update about-founder, contact, and index pages

--- a/contact.html
+++ b/contact.html
@@ -4,14 +4,40 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Contact – Niva</title>
+  <title>Contact – Pran-Z</title>
   <link rel="stylesheet" href="styles.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
 <header class="header">
   <div class="container header-inner">
-    <div class="logo">Niva</div>
+    <!-- LOGO (SVG) -->
+      <div class="logo">
+        <svg width="160" height="46" viewBox="0 0 420 120" xmlns="http://www.w3.org/2000/svg">
+          <style>
+            .pran {
+              font-family: 'Poppins', 'Nunito', 'Inter', sans-serif;
+              font-weight: 700;
+              font-size: 72px;
+              fill: #F5F5F5;
+            }
+
+            .dash {
+              fill: #8F88FF;
+            }
+
+            .z {
+              font-weight: 800;
+              font-size: 80px;
+              fill: #8F88FF;
+            }
+          </style>
+          <text x="10" y="78" class="pran">pran</text>
+          <rect x="178" y="52" width="26" height="6" rx="3" class="dash" />
+          <text x="215" y="82" class="pran z">Z</text>
+        </svg>
+      </div>
     <nav>
       <a href="index.html">Home</a>
       <a href="about-founder.html">About Founder</a>
@@ -32,7 +58,7 @@
 </main>
 
 <footer class="footer">
-  <div class="container footer-bottom">© 2026 Niva</div>
+  <div class="container footer-bottom">© 2026 Pran-Z</div>
 </footer>
 
 </body>
