--- a/index.html
+++ b/index.html
@@ -4,15 +4,41 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Niva – Modern Makhana Snacks for Gen Z</title>
+  <title>Pran-Z – Modern Makhana Snacks for Gen Z</title>
   <link rel="stylesheet" href="styles.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
   <header class="header">
     <div class="container header-inner">
-      <div class="logo">Niva</div>
+      <!-- LOGO (SVG) -->
+      <div class="logo">
+        <svg width="160" height="46" viewBox="0 0 420 120" xmlns="http://www.w3.org/2000/svg">
+          <style>
+            .pran {
+              font-family: 'Poppins', 'Nunito', 'Inter', sans-serif;
+              font-weight: 700;
+              font-size: 72px;
+              fill: #F5F5F5;
+            }
+
+            .dash {
+              fill: #8F88FF;
+            }
+
+            .z {
+              font-weight: 800;
+              font-size: 80px;
+              fill: #8F88FF;
+            }
+          </style>
+          <text x="10" y="78" class="pran">pran</text>
+          <rect x="178" y="52" width="26" height="6" rx="3" class="dash" />
+          <text x="215" y="82" class="pran z">Z</text>
+        </svg>
+      </div>
       <nav>
         <a href="index.html">Home</a>
         <a href="about-founder.html">About Founder</a>
@@ -30,11 +56,11 @@
           <p>Modern makhana crafted for clarity, balance, and everyday energy. Ancient Indian wisdom, reimagined for Gen
             Z and millennials.</p>
           <div class="hero-ctas">
-            <a class="btn btn-secondary" href="/about-founder.html">Why Niva</a>
+            <a class="btn btn-secondary" href="/about-founder.html">Why Pran-Z</a>
           </div>
         </div>
         <div class="hero-art">
-          <img class="hero-image" src="images/man-woman.png" alt="Niva product pack" />
+          <img class="hero-image" src="images/man-woman.png" alt="Parn-Z product pack" />
         </div>
       </div>
     </section>
@@ -125,7 +151,7 @@
     <section class="cta-banner">
       <div class="container cta-inner">
         <h3>Ready to snack smarter?</h3>
-        <p>Try Niva today — roasted, real, and relentlessly snackable.</p>
+        <p>Try Pran-Z today — roasted, real, and relentlessly snackable.</p>
         <a class="btn btn-primary" href="/contact.html">Contact now</a>
       </div>
     </section>
@@ -135,7 +161,32 @@
   <footer class="footer">
     <div class="container footer-inner">
       <div class="footer-brand">
-        <div class="logo">Niva</div>
+        <!-- LOGO AGAIN IN FOOTER -->
+        <div class="logo">
+          <svg width="140" height="40" viewBox="0 0 420 120" xmlns="http://www.w3.org/2000/svg">
+            <style>
+              .pran {
+                font-family: 'Poppins', 'Nunito', 'Inter', sans-serif;
+                font-weight: 700;
+                font-size: 72px;
+                fill: #F5F5F5;
+              }
+
+              .dash {
+                fill: #8F88FF;
+              }
+
+              .z {
+                font-weight: 800;
+                font-size: 80px;
+                fill: #8F88FF;
+              }
+            </style>
+            <text x="10" y="78" class="pran">pran</text>
+            <rect x="178" y="52" width="26" height="6" rx="3" class="dash" />
+            <text x="215" y="82" class="pran z">Z</text>
+          </svg>
+        </div>
         <p>Modern makhana for conscious living.</p>
       </div>
       <div class="footer-badges">
@@ -144,7 +195,7 @@
         <div class="foot-badge">Roasted</div>
       </div>
     </div>
-    <div class="container footer-bottom">© 2026 Niva</div>
+    <div class="container footer-bottom">© 2026 Parn-Z</div>
   </footer>
 
   <!-- Modals -->
