--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <p>Modern makhana crafted for clarity, balance, and everyday energy. Ancient Indian wisdom, reimagined for Gen
             Z and millennials.</p>
           <div class="hero-ctas">
-            <a class="btn btn-secondary" href="/about-founder.html">Why Pran-Z</a>
+            <a class="btn btn-secondary" href="about-founder.html">Why Pran-Z</a>
           </div>
         </div>
         <div class="hero-art">
@@ -152,7 +152,7 @@
       <div class="container cta-inner">
         <h3>Ready to snack smarter?</h3>
         <p>Try Pran-Z today — roasted, real, and relentlessly snackable.</p>
-        <a class="btn btn-primary" href="/contact.html">Contact now</a>
+        <a class="btn btn-primary" href="contact.html">Contact now</a>
       </div>
     </section>
 
