--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <p>Modern makhana crafted for clarity, balance, and everyday energy. Ancient Indian wisdom, reimagined for Gen
             Z and millennials.</p>
           <div class="hero-ctas">
-            <a class="btn btn-secondary" href="/about-founder.html">Why Pran-Z</a>
+            <a class="btn btn-secondary" href="about-founder.html">Why Pran-Z</a>
           </div>
         </div>
         <div class="hero-art">
@@ -139,7 +139,7 @@
       <div class="container lifestyle-inner">
         <div class="lifestyle-copy">
           <h2>Healthy, bold, snackable.</h2>
-          <p>From desk to gym bag, Niva makes clean snacking effortless. Crunch that satisfies, ingredients that respect
+          <p>From desk to gym bag, Pran-Z makes clean snacking effortless. Crunch that satisfies, ingredients that respect
             your body, and flavors that feel like a reward — not a compromise.</p>
         </div>
         <div class="lifestyle-art">
@@ -152,7 +152,7 @@
       <div class="container cta-inner">
         <h3>Ready to snack smarter?</h3>
         <p>Try Pran-Z today — roasted, real, and relentlessly snackable.</p>
-        <a class="btn btn-primary" href="/contact.html">Contact now</a>
+        <a class="btn btn-primary" href="contact.html">Contact now</a>
       </div>
     </section>
 
